--- a/.gitattributes
+++ b/.gitattributes
@@ -20,3 +20,8 @@
 texts/rasskaz.kir-uzb.txt -text
 texts/rasskaz.kir.txt -text svneol=unset#application/octet-stream
 /uzb-kir.prob -text svneol=unset#unset
+*.dix linguist-language=XML linguist-detectable=true
+*.lrx linguist-language=XML linguist-detectable=true
+*.lsx linguist-language=XML linguist-detectable=true
+*.tsx linguist-language=XML linguist-detectable=true
+*.t[[:digit:]]x linguist-language=XML linguist-detectable=true
