--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,6 @@
 ## Makefile for Kyrgyz--Uzbek
 ###############################################################################
 
-VERSION=0.2.0
 LANG1=kir
 LANG2=uzb
 PREFIX1=$(LANG1)-$(LANG2)
@@ -16,9 +15,11 @@ TARGETS_COMMON = $(PREFIX1).autobil.bin $(PREFIX2).autobil.bin \
         $(PREFIX1).rlx.bin $(PREFIX2).rlx.bin \
         $(PREFIX1).autolex.bin $(PREFIX2).autolex.bin
 
+@ap_include@
+
 # Use this goal for creating .deps, otherwise make -j2 will give problems:
 .deps/.d:
-	if [ ! -d .deps ]; then mkdir .deps; fi
+	if [ ! -d .deps ]; then $(MKDIR_P) .deps; fi
 	touch $@
 
 # Prevent the .d file from being removed automatically:
@@ -132,16 +133,6 @@ $(PREFIX2).autopgen.bin: $(AP_SRC2)/apertium-$(LANG2).post-$(LANG2).dix
 	apertium-validate-dictionary $< 
 	lt-comp lr $< $@
 
-###############################################################################
-## Translation modes
-###############################################################################
-
-# All modes are created by this one goal
-modes/$(PREFIX1).mode: modes.xml
-	apertium-validate-modes modes.xml
-	apertium-gen-modes modes.xml
-	cp *.mode modes/
-
 EXTRA_DIST=$(PREFIX1).prob $(PREFIX2).prob \
            $(BASENAME).$(PREFIX1).lrx \
            $(BASENAME).$(PREFIX1).dix \
@@ -154,7 +145,6 @@ EXTRA_DIST=$(PREFIX1).prob $(PREFIX2).prob \
            $(BASENAME).$(PREFIX2).t2x \
            modes.xml
 
-apertium_kir_uzbmodesdir=$(prefix)/share/apertium/modes/
 apertium_kir_uzbdir=$(prefix)/share/apertium/$(BASENAME)/
 
 apertium_kir_uzb_DATA=$(TARGETS_COMMON) \
@@ -165,20 +155,12 @@ apertium_kir_uzb_DATA=$(TARGETS_COMMON) \
 noinst_DATA=modes/$(PREFIX1).mode
 
 
-install-data-local:
-	mv modes modes.bak
-	$(prefix)/bin/apertium-gen-modes modes.xml $(BASENAME)
-	rm -rf modes
-	mv modes.bak modes
-	test -d $(DESTDIR)$(apertium_kir_uzbmodesdir) || mkdir $(DESTDIR)$(apertium_kir_uzbmodesdir)
-	modes=`xmllint --xpath '//mode[@install="yes"]/@name' modes.xml | sed 's/ *name="\([^"]*\)"/\1.mode /g'`; \
-		$(INSTALL_DATA) $$modes $(DESTDIR)$(apertium_modesdir); \
-		rm $$modes
+install-data-local: install-modes
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX1).t1x $(DESTDIR)$(apertium_kir_uzbdir)
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX1).t2x $(DESTDIR)$(apertium_kir_uzbdir)
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX2).t1x $(DESTDIR)$(apertium_kir_uzbdir)
 	$(INSTALL_DATA) $(BASENAME).$(PREFIX2).t2x $(DESTDIR)$(apertium_kir_uzbdir)
 
 CLEANFILES = $(TARGETS_COMMON)
-clean-local: 
-	-rm -rf .deps modes
+clean-local:
+	-rm -rf .deps
